--- a/style.css
+++ b/style.css
@@ -1,27 +1,32 @@
 @media screen and (min-width: 1024px) {
-  
+
   div.large_container {
-    display: unset;}
-        
-    div.mobile_container{
-    display: none;}
-      
+    display: unset;
+  }
+
+  div.mobile_container {
+    display: none;
+  }
+
 
 }
 
 @media screen and (min-width: 720px) and (max-width: 1023px) {
 
   div.large_container {
-  display: none;}
-      
-  div.mobile_container{
-  display: unset;}
-    
+    display: none;
   }
-  
+
+  div.mobile_container {
+    display: unset;
+  }
+
+}
 
 
-html, body {
+
+html,
+body {
   margin: 0;
   padding: 0;
   /* background-color: black; */
@@ -32,11 +37,11 @@ canvas {
 
 }
 
-h2{
-  color:white;
+h2 {
+  color: white;
 }
 
-.slidecontainer{
+.slidecontainer {
 
   position: fixed;
   bottom: 0px;
